samples/_failures_safe/1761615060_a627b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a92fe769.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_a92fe769.c:142:5: error: expected declaration or statement at end of input
  142 |     heap->size = V;
      |     ^~~~
